--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "author": "Antoine Boileau",
   "license": "ISC",
   "dependencies": {
+    "@google/maps": "^0.5.0",
     "bookshelf": "^0.13.3",
     "bull": "^3.4.2",
     "dotenv": "^6.0.0",
