Add db:migrate at every deploy

--- a/package.json
+++ b/package.json
@@ -4,14 +4,15 @@
   "description": "Worker Server",
   "main": "server.js",
   "scripts": {
-    "test": "NODE_ENV=test npm run db:migrate && NODE_ENV=test npx mocha --recursive --exit --reporter dot tests",
     "db:new": "node ./scripts/create-database.js",
     "db:create": "node ./node_modules/knex/bin/cli.js --knexfile db/knexfile.js migrate:make $migrationname",
     "db:migrate": "node ./node_modules/knex/bin/cli.js --knexfile db/knexfile.js migrate:latest",
     "db:delete": "node ./scripts/drop-database.js",
     "db:reset": "npm run db:delete && npm run db:new && npm run db:migrate",
     "redis:start": "docker container run --name travel-redis --publish 6379:6379 --detach --rm redis",
-    "redis:stop": "docker stop travel-redis"
+    "redis:stop": "docker stop travel-redis",
+    "scalingo-postbuild": "npm run db:migrate",
+    "test": "NODE_ENV=test npm run db:migrate && NODE_ENV=test npx mocha --recursive --exit --reporter dot tests"
   },
   "author": "Antoine Boileau",
   "license": "ISC",
