Add route detail job

--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "hapi": "^17.5.1",
     "hapi-pino": "^4.0.4",
     "knex": "^0.13.0",
-    "pg": "^7.4.3"
+    "pg": "^7.4.3",
+    "yargs": "^12.0.1"
   },
   "devDependencies": {
     "chai": "^4.1.2",
